tests/errors/bundle-delay.expect
---CODE---
1
---STDERR---
error: bundle's liveness interval is malformed: end is not strictly greater than start
  ┌─ tests/errors/bundle-delay.fil:4:29
  │
4 │     bundle f[#P+1]: for<#k> @[G+#k, G+#P] 16;
  │                          -  ^^^^^^^^^^^^^ bundle's liveness is |(#P-#k)|
  │                          │   
  │                          parameter ranges from 0 to (#P+1)

error: length of bundle wire availability must be less than event's delay
  ┌─ tests/errors/bundle-delay.fil:4:29
  │
1 │ comp Bar[#P]<G:1>() -> () {
  │                - event's delay
  ·
4 │     bundle f[#P+1]: for<#k> @[G+#k, G+#P] 16;
  │                          -  ^^^^^^^^^^^^^ bundle's liveness is |(#P-#k)|
  │                          │   
  │                          parameter ranges from 0 to (#P+1)

Compilation failed with 2 errors.
Run with --show-models to generate assignments for failing constraints.
